--- a/src/components/TagInput/TagInput.scss
+++ b/src/components/TagInput/TagInput.scss
@@ -33,7 +33,7 @@
   }
 
   &__save-button {
-    background: #1E5EF1;
+    background: #1e5ef1;
     color: #fff;
     border: none;
     padding: 8px 16px;
