--- a/src/components/ProgressBar/ProgressBar.scss
+++ b/src/components/ProgressBar/ProgressBar.scss
@@ -1,16 +1,19 @@
 .progress-bar {
   &__container {
-    flex: 1;
-    height: 4px;
-    background-color: #ccc;
-    border-radius: 2px;
-    margin-left: 8px;
-    position: relative;
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
   }
 
-  &__fill {
-    height: 100%;
-    border-radius: 2px;
-    width: 0;
+  &__item {
+    width: 10px;
+    height: 5px;
+    border-radius: 5px;
+    background-color: #e0e0e0; 
+    margin-right: 5px;
+
+    &--active {
+      background-color: green;
+    }
   }
 }
