--- a/src/components/TagList/TagList.scss
+++ b/src/components/TagList/TagList.scss
@@ -7,12 +7,19 @@
     display: flex;
     width: 100%;
     align-items: center;
-    padding: 8px;
+    padding: 10px 3px;
+    cursor: pointer;
 
     &:hover {
       background-color: #f5f5f5;
     }
+
+    &--highlighted {
+    background-color: #f5f5f5; 
   }
+
+  }
+
 
   &__name {
     margin-left: 10px;
