--- a/plop-templates/Component.tsx.hbs
+++ b/plop-templates/Component.tsx.hbs
@@ -1,9 +1,9 @@
 import React, { FC } from 'react';
 
-import { I{{properCase name}}ComponentProps } from 'components/{{properCase name}}/models.d';
+import { I{{properCase name}}Props } from 'components/{{properCase name}}/models.d';
 
 
-const {{properCase name}}: FC<I{{properCase name}}ComponentProps> = () => {
+const {{properCase name}}: FC<I{{properCase name}}Props> = () => {
   return (
     <div>{{properCase name}}</div>
   );
