--- a/plop-templates/Component.test.tsx.hbs
+++ b/plop-templates/Component.test.tsx.hbs
@@ -1,7 +1,7 @@
 import React from 'react';
 import { render, screen } from "@testing-library/react";
 import "@testing-library/jest-dom";
-import { I{{properCase name}}ComponentProps } from "../models.d";
+import { I{{properCase name}}Props } from "../models.d";
 import {{properCase name}} from '../{{properCase name}}';
 
 
