--- a/src/components/WarningText/WarningText.scss
+++ b/src/components/WarningText/WarningText.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   font-size: 14px;
-  color: #A09EA9;
+  color: #a09ea9;
 
   &__icon {
     margin-right: 8px;
